Java 11 記法に修正